Fixed overflow issues

--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,7 @@
-
+html{
+    overflow-x: hidden;
+    overflow-y:hidden;
+}
 *{
     box-sizing: border-box;
 }
@@ -7,6 +10,8 @@ body{
     font-family: sans-serif;
     color: white;
 
+    height: 100vh;
+    width: 100%;
    overflow-x: hidden;
 }
 #saveEmoji{
